--- a/static/css/vars/globals.css
+++ b/static/css/vars/globals.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap");
 
-html, body {
-  font-family: 'Source Sans Pro', sans-serif;
+html,
+body {
+  font-family: "Source Sans Pro", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #2c3e50;
@@ -23,39 +24,39 @@ img {
 }
 
 .pagination-area {
-    margin-top: 10px;
-    margin-bottom: 30px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 .pagination-area .page-numbers {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    color: var(--main-color);
-    background-color: transparent;
-    border: 1px solid var(--main-color);
-    text-align: center;
-    display: inline-block;
-    position: relative;
-    margin-left: 3px;
-    margin-right: 3px;
-    font-size: 18px;
-    border-radius: 5px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  color: var(--main-color);
+  background-color: transparent;
+  border: 1px solid var(--main-color);
+  text-align: center;
+  display: inline-block;
+  position: relative;
+  margin-left: 3px;
+  margin-right: 3px;
+  font-size: 18px;
+  border-radius: 5px;
 }
 .pagination-area .page-numbers.current,
 .pagination-area .page-numbers:hover {
-    background-color: var(--main-color);
-    color: #ffa737;
+  background-color: var(--main-color);
+  color: #ffa737;
 }
 .pagination-area .page-numbers svg {
-    position: relative;
-    font-size: 20px;
-  }
+  position: relative;
+  font-size: 20px;
+}
 
-  .section-title h2 {
-  max-width: 390px;
+.section-title h2 {
+  /* max-width: 390px; */
   color: var(--main-color);
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
   font-size: 35px;
   font-weight: 600;
   margin-top: 0;
@@ -63,10 +64,10 @@ img {
   margin-bottom: 0;
 }
 .section-title {
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 0;
   position: relative;
-  text-align: center;
+  /* text-align: center; */
 }
 .section-title span {
   margin-bottom: 8px;
