--- a/static/css/vars/globals.css
+++ b/static/css/vars/globals.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #2c3e50;
+  scroll-behavior: unset !important;
 }
 .pb-70 {
   padding-bottom: 70px !important;
