--- a/static/css/vars/globals.css
+++ b/static/css/vars/globals.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: #2c3e50;
   scroll-behavior: unset !important;
+  overflow-x: hidden;
 }
 .pb-70 {
   padding-bottom: 70px !important;
